# DZ_8_Web

./: README.md  READMY.md  pyproject.toml
1/: main.py  models.py  seed.py
2/: consumer_email.py  consumer_sms.py  models.py  producer.py
